# substreams-solana-program-instructions

./: .gitignore  .sfreleaser  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
src/: lib.rs  pubkey.rs  token_instruction_2022.rs  transfer_fee_instruction.rs
