[package]
name = "substreams-solana-program-instructions"
version = "0.1.1"
edition = "2021"
description = "Substreams Solana program instructions"
authors = ["StreamingFast Contributors <team@streamingfast.io>"]
license = "Apache-2.0"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-solana-macro"
readme = "README.md"
keywords = [ "substreams", "streamingfast", "instruction", "solana", "program"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
substreams = "0.5"
substreams-solana-core = "0.11"
substreams-solana-macro = "0.11"

anyhow = "1.0.72"
num_enum = "0.7.0"

#[patch.crates-io]
#substreams-solana-core = { path = "/Users/cbillett/devel/sf/substreams-solana/core"}
#substreams-solana-macro = { path = "/Users/cbillett/devel/sf/substreams-solana/macro"}